crates/ruff_python_parser/tests/snapshots/invalid_syntax@single_star_return.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/single_star_return.py
---
## AST

```
Module(
    ModModule {
        node_index: 0,
        range: 0..19,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: 0,
                    range: 0..18,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("f"),
                        range: 4..5,
                        node_index: 0,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 5..7,
                        node_index: 0,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Return(
                            StmtReturn {
                                node_index: 0,
                                range: 9..18,
                                value: Some(
                                    Starred(
                                        ExprStarred {
                                            node_index: 0,
                                            range: 16..18,
                                            value: Name(
                                                ExprName {
                                                    node_index: 0,
                                                    range: 17..18,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | def f(): return *x
  |                 ^^ Syntax Error: Starred expression cannot be used here
  |
